2017-04-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/mailbox_pop3.c (notify_progress),
	  (libbalsa_mailbox_pop3_check): cast gsize to unsigned long, to
	  print portably with %lu.

2017-04-13  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/address-book-ldif.c (string_to_value_spec),
	(value_spec_to_string): remove custom base64 encode and decode stuff.

2017-04-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/libbalsa-vfs.c (libbalsa_vfs_create_stream): retain
	ownership of priv->gio_gfile.

2017-04-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/imap/auth-gssapi.c (ag_get_token), (ag_parse_request),
	(ag_negotiate_parameters): use existing buffers for base-64
	conversions.

2017-04-09  Albrecht Dreß

	* libbalsa/mailbox_pop3.c (libbalsa_mailbox_pop3_check): do not
	unref NULL NetClientPop object.

2017-04-09  Albrecht Dreß

	* libnetclient/net-client.c (net_client_new): do not return
	pointer to finalized object.

2017-04-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

Streamline code

	* src/spell-check.c: remove redundant gboolean
	quoted_rex_compiled;
	(balsa_spell_check_start): do not use it;
	(next_word): ditto;
	(balsa_spell_check_destroy): ditto; also use g_clear_pointer.

2017-04-07  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-message.c (select_part): reset adjustments only when
	  displaying a real message part.

2017-04-07  Albrecht Dreß

Do not emit a critical warning

	* src/balsa-mime-widget.c (balsa_mime_widget_new_unknown): Do
	  not emit a critical warning on the console, e.g. when I select
	  an encrypted message, but cancel the decryption:

2017-04-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Deprecation cleanup

	* libbalsa/gmime-filter-header.c (g_mime_filter_header_new): use
	g_object_new instead of g_object_newv, because the latter is
	deprecated in glib-2.54.

2017-03-15  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use GMime's native GIO Stream module
