@@ -96,8 +96,8 @@ size_t libbalsa_readfile_nostat(FILE * fp, char **buf);
 
 gchar *libbalsa_get_hostname(void);
 gchar *libbalsa_get_domainname(void);
-gchar *libbalsa_urlencode(const gchar* str);
-gchar *libbalsa_urldecode(const gchar * str);
+#define libbalsa_urlencode(str) (g_uri_escape_string((str), NULL, FALSE))
+#define libbalsa_urldecode(str) (g_uri_unescape_string((str), NULL))
 
 gboolean libbalsa_find_word(const gchar * word, const gchar * str);
 void libbalsa_wrap_string(gchar * str, int width);
